--- a/style/main.scss
+++ b/style/main.scss
@@ -109,6 +109,7 @@ header {
 
         .checkbox {
           display: none;
+          text-decoration: none;
 
           &:hover {
             cursor: pointer;
