--- a/style/main.css
+++ b/style/main.css
@@ -1926,8 +1926,7 @@ header .nav-links .menu-icon {
 }
 
 .single-post {
-  padding-top: 120px;
-  padding-bottom: 90px;
+
   font-family: "Poppins", sans-serif;
 }
 .single-post * {
@@ -1937,10 +1936,13 @@ header .nav-links .menu-icon {
   display: flex;
   flex-direction: column;
   gap: 20px;
+  padding: 1.5rem;
 }
 .post-hero {
   border-bottom: 1px solid #e5eaee;
   padding-bottom: 16px;
+  padding-top: 15%;
+  z-index: 4;
 }
 .post-hero__row {
   display: flex;
@@ -1950,7 +1952,7 @@ header .nav-links .menu-icon {
   flex-wrap: wrap;
 }
 .post-hero__title {
-  font-size: 2rem;
+  font-size: 1.5rem;
   font-weight: 600;
   color: #4a7f78;
   margin: 0;
@@ -1973,6 +1975,7 @@ header .nav-links .menu-icon {
 }
 .post-hero__image {
   width: 100%;
+  height: 25rem;
   border-radius: 24px;
   display: block;
   object-fit: cover;
