--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*
 Theme Name: BioSolve4All Custom Theme
 Theme URI: https://biosolve4all.com
-Author: Zé + ChatGPT
+Author: Gralha Studio
 Description: Custom theme developed exclusively by Gralha Studio for BioSolve4All.
 Version: 1.0.0
 Text Domain: biosolve4all
