update main css

--- a/style/main.css
+++ b/style/main.css
@@ -1935,7 +1935,7 @@ header .nav-links .menu-icon {
     padding-top: 0px;
   }
 
-  .post-hero {
+  header .post-hero {
 
     padding-top: 0rem;
 
