--- a/style/main.css
+++ b/style/main.css
@@ -2295,4 +2295,11 @@ body.share-modal-open {
     padding-top: 2rem;
   }
 }
+
+@media (min-width: 1420px) {
+  .single-post article {
+    padding-left: 20.5rem;
+    padding-right: 20.5rem;
+  }
+}
 /*# sourceMappingURL=main.css.map */
